Fix the UI alignment issue on checkout page, caused by 'Your Savings' changes.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@73606 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/expressco/cartcontent.css
+++ b/projects/Media/docroot/assets/css/expressco/cartcontent.css
@@ -1384,8 +1384,12 @@ label[for="dontupdatecartlines"] {
 
 .eTippingEnabled .rowcell-colon-right:after{
   content: " ";
-  white-space: pre;
 }
+
+.eTippingEnabled .rowcell-colon-right.st_label_youSaved:after{
+	white-space: pre;
+}
+
 .eTippingEnabled .strl_text:after, .cartsection__total .strl_text:after, .cartsection__tax .strl_text:after{
   content:":";
 }
